[added] some logic
