# ecclesiast-admin/src/app/Auth/api.js
@@ -7,5 +7,6 @@ const URLS = {
 
 export default {
   signIn: async (payload) => api.post(`${URLS.AUTH}/sign-in`, payload),
+  signOut: async (_id) => api.post(`${URLS.AUTH}/sign-out/${_id}`),
   refresh: async () => api.post(`${URLS.AUTH}/refresh`),
 };
